tdr/protocol/gen/tdr_xml_reader_l.c
/* Generated by re2c 1.0.1 on Tue Feb 23 17:07:57 2021 */
#line 1 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/tdr_xml_reader_l.re"
#include "../../tdr_platform.h"
#include "../tdr_xml_reader.h"
#include "../tdr_xml_reader_scanner.h"
#include "tdr_xml_reader_l.h"
#include <string.h>




		
tdr_xml_reader_token_t tdr_xml_reader_scan(tdr_xml_reader_t *self)
{
	tdr_xml_reader_scanner_context_t *sp = NULL;
	self->error_code = E_TDR_NOERROR;
restart:
	sp = &self->scanner_context_stack[self->scanner_context_stack_num - 1];
	if(YYCURSOR >= YYLIMIT)
	{
		if(self->scanner_context_stack_num > 0)
		{
			if(self->scanner_context_stack[self->scanner_context_stack_num - 1].filecontent_ptr)
			{
				free(self->scanner_context_stack[self->scanner_context_stack_num - 1].filecontent_ptr);
			}
			--self->scanner_context_stack_num;
			goto restart;
		}
		return tok_end;
	}
	sp->yylloc.first_line = sp->yylineno;
	sp->yylloc.first_column = sp->yycolumn;
	yytext = YYCURSOR;

#line 37 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/gen/tdr_xml_reader_l.c"
{
	YYCTYPE yych;
	switch (YYGETCONDITION()) {
	case yycINITIAL: goto yyc_INITIAL;
	}
/* *********************************** */
yyc_INITIAL:
	YYFILL(9);
	yych = *YYCURSOR;
	switch (yych) {
	case '<':	goto yy5;
	default:	goto yy3;
	}
yy3:
	++YYCURSOR;
yy4:
	yyleng = YYCURSOR - yytext; tdr_xml_reader_locate(self);
#line 123 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/tdr_xml_reader_l.re"
	{ goto restart;					 }
#line 57 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/gen/tdr_xml_reader_l.c"
yy5:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '!':	goto yy6;
	case '/':	goto yy8;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy9;
	default:	goto yy4;
	}
yy6:
	yych = *++YYCURSOR;
	switch (yych) {
	case '-':	goto yy11;
	case 'I':
	case 'i':	goto yy12;
	default:	goto yy7;
	}
yy7:
	YYCURSOR = YYMARKER;
	goto yy4;
yy8:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case '>':	goto yy7;
	default:	goto yy14;
	}
yy9:
	++YYCURSOR;
	YYFILL(1);
	yych = *YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy9;
	case '>':	goto yy15;
	default:	goto yy7;
	}
yy11:
	yych = *++YYCURSOR;
	switch (yych) {
	case '-':	goto yy17;
	default:	goto yy7;
	}
yy12:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'N':
	case 'n':	goto yy19;
	default:	goto yy7;
	}
yy13:
	++YYCURSOR;
	YYFILL(1);
	yych = *YYCURSOR;
yy14:
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy13;
	case '>':	goto yy20;
	default:	goto yy7;
	}
yy15:
	++YYCURSOR;
	yyleng = YYCURSOR - yytext; tdr_xml_reader_locate(self);
#line 120 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/tdr_xml_reader_l.re"
	{return tok_tag_begin;															}
#line 306 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/gen/tdr_xml_reader_l.c"
yy17:
	++YYCURSOR;
	yyleng = YYCURSOR - yytext; tdr_xml_reader_locate(self);
#line 45 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/tdr_xml_reader_l.re"
	{
	const char * comment_begin = NULL;
	for(comment_begin = YYCURSOR; YYCURSOR != YYLIMIT; ++YYCURSOR)
	{
		if(YYCURSOR - comment_begin >= 2)
		{
			if((*(YYCURSOR - 2) == '-') && (*(YYCURSOR - 1) == '-') && (*(YYCURSOR - 0) == '>'))
			{
				goto restart;
			}
		}
	}
	goto restart;
}
#line 325 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/gen/tdr_xml_reader_l.c"
yy19:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'C':
	case 'c':	goto yy22;
	default:	goto yy7;
	}
yy20:
	++YYCURSOR;
	yyleng = YYCURSOR - yytext; tdr_xml_reader_locate(self);
#line 121 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/tdr_xml_reader_l.re"
	{return tok_tag_end;															}
#line 338 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/gen/tdr_xml_reader_l.c"
yy22:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'L':
	case 'l':	goto yy23;
	default:	goto yy7;
	}
yy23:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'U':
	case 'u':	goto yy24;
	default:	goto yy7;
	}
yy24:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'D':
	case 'd':	goto yy25;
	default:	goto yy7;
	}
yy25:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':
	case 'e':	goto yy26;
	default:	goto yy7;
	}
yy26:
	++YYCURSOR;
	yyleng = YYCURSOR - yytext; tdr_xml_reader_locate(self);
#line 60 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/tdr_xml_reader_l.re"
	{
	tdr_error_code_t r;
	const char* file_begin;
	const char* file_end;
	size_t file_len;
	char file[TDR_MAX_PATH_LENGTH];

	for(file_begin = NULL; YYCURSOR != YYLIMIT; ++YYCURSOR)
	{
		if(*YYCURSOR == '"')
		{
			++YYCURSOR;
			file_begin = YYCURSOR;
			break;
		}
	}
	if(file_begin == NULL)
	{
		self->error_code = E_TDR_SYNTAX;
		return tok_error;
	}
	for(file_end = NULL; YYCURSOR != YYLIMIT; ++YYCURSOR)
	{
		if(*YYCURSOR == '"')
		{			
			file_end = YYCURSOR;
			++YYCURSOR;
			break;
		}		
	}
	if(file_end == NULL)
	{
		self->error_code = E_TDR_SYNTAX;
		return tok_error;
	}
	for(;YYCURSOR != YYLIMIT; ++YYCURSOR)
	{
		if(*YYCURSOR == '>')
		{
			++YYCURSOR;
			break;
		}
	}
	file_len = file_end - file_begin;
	if(file_len >= TDR_MAX_PATH_LENGTH)
	{
		self->error_code = E_TDR_OUT_OF_MEMORY;
		return tok_error;
	}
	memcpy(file, file_begin, file_len);
	file[file_len] = 0;

	r = tdr_xml_reader_push_file(self, file); 
	if(r != E_TDR_NOERROR)
	{
		self->error_code = r;
		return tok_error;
	}
	goto restart;
}
#line 431 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/gen/tdr_xml_reader_l.c"
}
#line 124 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/tdr_xml_reader_l.re"
	
}
